<resources>
    <string name="app_name">Wifi QR codes</string>
    <string name="wifi">Wifi</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add_button_description">Add new wifi</string>
    <string name="edit_button_description">Edit wifi details</string>
    <string name="delete_button_description">Delete wifi</string>
    <string name="send_button_description">Send wifi QR code</string>
    <string name="back_button_description">Back to the wifi list</string>
    <string name="login_button_description">Log in</string>
    <string name="logout_button_description">Log out</string>
</resources>