<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/gradient"
        android:layout_width="381dp"
        android:layout_height="381dp"
        android:src="@drawable/gradient_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:shapeAppearanceOverlay="@style/round_image_shape_60"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivQRCode"
        android:layout_width="381dp"
        android:layout_height="381dp"
        android:cropToPadding="false"
        android:padding="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        app:shapeAppearanceOverlay="@style/round_image_shape_45"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvSSID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mulish_bold"
        android:text=""
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivQRCode" />

    <ImageButton
        android:id="@+id/btnEditItem"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/light_gray"
        android:contentDescription="@string/edit_button_description"
        android:minHeight="48dp"
        android:padding="10dp"
        android:src="@drawable/ic_action_edit"
        app:layout_constraintEnd_toStartOf="@+id/btnDeleteItem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSSID"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnDeleteItem"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/light_gray"
        android:contentDescription="@string/delete_button_description"
        android:minHeight="48dp"
        android:padding="10dp"
        android:src="@drawable/ic_action_delete"
        app:layout_constraintEnd_toStartOf="@+id/btnSendItem"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnEditItem"
        app:layout_constraintTop_toBottomOf="@+id/tvSSID"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnSendItem"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/light_gray"
        android:contentDescription="@string/send_button_description"
        android:minHeight="48dp"
        android:padding="10dp"
        android:src="@drawable/ic_action_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDeleteItem"
        app:layout_constraintTop_toBottomOf="@+id/tvSSID"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>